--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   dio: ^5.1.1
   logger: ^1.0.0
   flutter_riverpod: ^2.3.5
-  http: ^0.13.5
+  socket_io_client: ^2.0.2
 
 dev_dependencies:
   flutter_test:
